# Kokkidio

./: .gitignore  CMakeLists.txt  Doxyfile  LICENCE  LICENCE.README  LICENSE.README  README.adoc  README.md  build.sh  usage.md
.github/workflows/: doxygen.yml
cmake/: KokkidioConfig.cmake  KokkidioConfigVersion.in.cmake  KokkidioVars.in.cmake  checkEigen.cmake  checkKokkos.cmake  checkVar.cmake  configureTarget.cmake  include_conf.cmake  install.cmake  sharedOpts.cmake
env/: env_cpu_gcc.sh  env_cuda.sh  env_ompt.sh  env_tpl.sh  node_patterns.sh  pkgdir_shared.sh
env/_old/: env_cuda.sh  env_hip.sh  env_sycl.sh
env/nodes/: desktop-home-neon.sh  gaya.sh  gwdg_cuda.sh  horeka_ftp.sh  zib_intel.sh
include/: Kokkidio.hpp
include/Kokkidio/: DualMapView.hpp  DualViewMap.hpp  EigenDualView.hpp  EigenRange.hpp  EigenRange_func.hpp  EigenTypeHelpers.hpp  EigenView.hpp  IndexRange.hpp  IndexRange_base.hpp  MapView.hpp  ParallelRange.hpp  ParallelRange_buffer.hpp  ParallelRange_cudahip.hpp  RangePolicyHelper.hpp  TargetEnum.hpp  TargetSpaces.hpp  ViewMap.hpp  macros.hpp  mathWrapper.hpp  memory.hpp  memory_compat_observer_ptr.hpp  ompSegment.hpp  ompSegment_base.hpp  parallel_for.hpp  parallel_reduce.hpp  syclify_macros.hpp  typeAliases.hpp  typeHelpers.hpp  util.hpp
include/bench/: runAndTime.hpp  unifyBackends.hpp  unify_omptarget.hpp
lib/: CMakeLists.txt  getKokkos.sh
scripts/: build_download.sh  build_func.sh  build_parseOpts.sh  install_example.sh  nodefile_base.sh  parseOpts.sh  plotBars.gp  plotBars.sh  readme_gcc.sh  readme_llvm.sh  run_bench.sh  run_bench_all.sh  run_bench_all_rest.sh  scp_up.sh
src/examples/: CMakeLists.txt  DualMapView.cpp  DualViewMap.cpp  MapView.cpp  ViewMap.cpp  axpy.cpp  colmult.cpp  dot.cpp
src/examples/colmult/: CMakeLists.txt  colmult.cpp  colmult.in  colmult_device.cpp  colmult_host.cpp  colmult_main.cpp
src/tests/: CMakeLists.txt
src/tests/axpy/: CMakeLists.txt  axpy.hpp  axpy_native_cpu.cpp  axpy_native_cuda_hip.cpp  axpy_native_sycl.cpp  axpy_unif.in  axpy_unif_cpu.cpp  main.cpp
src/tests/dotProduct/: CMakeLists.txt  dotProduct.hpp  dotProduct_cpu.cpp  dotProduct_cpu_omp.cpp  dotProduct_cpu_omp_rng.cpp  dotProduct_cuda_hip.cpp  dotProduct_gpu_cuda_hip.cpp  dotProduct_gpu_ompt.cpp  dotProduct_native_cuda_hip.cpp  dotProduct_native_sycl.cpp  dotProduct_unif.in  main.cpp
src/tests/friction/: CMakeLists.txt  friction.hpp  friction_context.in  friction_context_cpu.cpp  friction_context_gpu.cpp  friction_cpu.cpp  friction_native_cuda_hip.cpp  friction_native_sycl.cpp  friction_unif.in  main.cpp
src/tests/friction/impl/: friction_buf3.hpp  friction_cstyle.hpp
src/tests/include/: funcWrapper.hpp  parseOpts.hpp  runAndTime.hpp  testMacros.hpp  unifyBackends.hpp  unify_cuda_hip.hpp
src/tests/norm/: CMakeLists.txt  main.cpp  norm.hpp  norm_cpu.cpp  norm_cuda_hip.cpp  norm_native_sycl.cpp  norm_unif.in  norm_unif_cpu.cpp  norm_unif_gpu.cpp
src/tests/redux/: CMakeLists.txt  dim3.xlsx  main.cpp  reduce_generic.cu  reduce_run.cpp  redux.hpp  redux_cu_sum0_impl.hpp  redux_cu_sum6_impl.hpp  sum.cu  sum_cpu.cpp  sum_run.cpp
tests/: CMakeLists.txt
tests/axpy/: CMakeLists.txt  axpy_native_cuda_hip.cpp  axpy_unif.in  axpy_unif_gpu.cpp  main.cpp
tests/dotProduct/: dotProduct_cpu.cpp  dotProduct_cpu_omp.cpp  dotProduct_cpu_omp_rng.cpp  dotProduct_cuda_hip.cpp  dotProduct_gpu_cuda_hip.cpp  dotProduct_gpu_ompt.cpp  dotProduct_unif.in  dotProduct_unif_cpu.cpp  dotProduct_unif_gpu.cpp  main.cpp
tests/friction/: friction.hpp  friction_context.in  friction_gpu_cuda_hip.cpp  friction_unif.in  friction_unif_cpu.cpp  friction_unif_gpu.cpp  main.cpp
tests/redux/: main.cpp  reduce_cpu.cpp  reduce_generic.cu  reduce_run.cpp  redux_cudahip_generic.hpp  sum.cu  sum_cpu.cpp  sum_run.cpp
